# LightningGen

./: CMakeLists.txt  Canvas.cpp  Canvas.h  Lightning.cpp  LightningTree.cpp  LightningTree.h  README.md  Renderer.cpp  Renderer.h  Shader.h  ShaderLoader.cpp  ShaderLoader.h
shaders/: bloom.frag  bloom.vs  lightning_gen.geom  lightning_gen.vs  line.frag  line.vs  screen.frag
